--- a/UserApp/templates/UserApp/registration.html
+++ b/UserApp/templates/UserApp/registration.html
@@ -43,4 +43,10 @@
             <input type="submit" value="Зарегистрироваться">
         </form>
     </div>
+    <!-- Скрипты -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
+        <script>
+            $('#id_phone').mask("+7(999) 999-99-99");
+        </script>
 {% endblock %}
