--- a/OrderApp/templates/OrderApp/user_orders_ajax.html
+++ b/OrderApp/templates/OrderApp/user_orders_ajax.html
@@ -31,7 +31,7 @@
         </div>
         <div class="order__block_3">
             <p class="number">№ {{ order.id|rightzeros }}</p>
-            <img src="{% static 'img/Кнопка подробнее.png' %}">
+            <img class="more" src="{% static 'img/Кнопка подробнее.png' %}">
             <p><img src="{% static 'img/Иконка часов.png' %}">{{ order.adding_datetime }}</p>
         </div>
     </a>
